# AI-Surveillance

./: .gitignore  README.md  Run_Backend.bat  Start_All.bat  environment.yml  first.py  launcher.html  launcher.py  project_description.txt  retrain.py  second.py  train.py
.github/workflows/: metropolis-ci.yml  python-package-conda.yml
Version 1/: second.py
Version 1/surveillance-app/: .env.example  (+10 more)
applicants/: applicants_data.json
benchmarks/: run_benchmarks.py
configs/: deepstream_app.txt  metropolis.yaml  nvinfer_config.txt  tracker_config.yml
cpp_extensions/: CMakeLists.txt  pyproject.toml  setup.py
cpp_extensions/include/: metropolis_cpp.h
cpp_extensions/src/: bindings.cpp  nms.cu  preprocess.cu  risk_engine.cpp
docker/: Dockerfile.metropolis  Dockerfile.triton  docker-compose.dev.yml  docker-compose.yml  smoke_test.sh
docs/: API_Reference.md  Architecture.md  Benchmarks.md  Dataset.md  Future_Scope.md  Limitations.md  Metropolis_Setup.md  Processing_Pipeline.md  Storage.md  Tools_Used.md  Working_of_System.md  readme.txt
examples/: export_model.py  run_benchmark.py  stream_events.py  track_objects.py
phone-detection/: README.dataset.txt  README.roboflow.txt  data.yaml
proto/: analytics.proto  generate.py
surveillance-app/: APP_UPDATES_SUMMARY.md  BACKEND_SETUP.md  BENCHMARK.md  COMPLETION.md  FEATURES.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  START_HERE.md  eslint.config.js  examinee_manager.py  examinees.json  index.html  package-lock.json  package.json  second_CORS_enabled.py  start_surveillance.bat  tailwind.config.js
(+1688 files in other folders)
